--- a/public/theme/assets/css/style.css
+++ b/public/theme/assets/css/style.css
@@ -9323,3 +9323,13 @@ body[data-layout-mode="dark"]
     height: 355px;
   }
 }
+
+select {
+  margin-bottom: 10px;
+  margin-top: 10px;
+  outline: 0;
+  background: #5B60FF;
+  color: #fff;
+  padding: 4px;
+  border-radius: 9px;
+}
